[package]
name = "paa"
version = "0.1.0"
authors = ["Brett <brett@bmandesigns.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "to_png"
harness = false

[dependencies]
byteorder = "1.3"
image = "0.23"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = "0.3"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[dev-dependencies]
criterion = "0.3"
